<resources>
    <string name="app_name">有趣的旅行</string>
    <string name="skip_button_text">跳过</string>
    <string name="permissions_not_completed">部分权限未授予应用，可能会导致功能不完全</string>
    <string name="not_available">N/A</string>
    <string name="clock">我的打卡</string>
    <string name="app">App</string>
    <string name="moments">动态</string>
    <string name="philosophy">每日一语</string>
    <string name="myApp">我的应用</string>
    <string name="funnyTrip">旅游趣事</string>
    <string name="not_login">未登录</string>
    <string name="account_security">账号安全</string>
    <string name="account_info">账号资料</string>
    <string name="contact_me">联系我们</string>
    <string name="my_note">我的笔记</string>
    <string name="no_note">勤做笔记是个好习惯</string>
    <string name="message">消息</string>
    <string name="weather_location">天气位置</string>
    <string name="search">搜索</string>
    <string name="write_note">记笔记</string>
    <string name="save">保存</string>
    <string name="send">发送</string>
    <string name="enter_verify_msg">输入验证信息</string>
    <string name="route">路线</string>
    <string name="search_for_pos">搜索地点</string>
    <string name="current_position">当前已添加地点</string>
    <string name="start">起</string>
    <string name="end">终</string>
    <string name="clear">清空</string>
    <string name="find_more">发现更多</string>
    <string name="all">全部</string>
    <string name="search_tips">搜索攻略</string>
    <string name="data_from_ctrip">网页来源:携程网</string>
    <string name="add_to_star">添加到收藏</string>
    <string name="name">名称</string>
    <string name="my_tips">我的攻略</string>
    <string name="settings">设置</string>
    <string name="login">登录</string>
    <string name="forget_passwd">忘记密码</string>
    <string name="sign_up">注册</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
