<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.tips.StarTipActivity"
    android:orientation="vertical">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_height">
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:layout_gravity="center|left"
                android:src="@drawable/back"
                android:id="@+id/back"
                android:layout_width="@dimen/toolbar_back_size"
                android:layout_height="@dimen/toolbar_back_size"/>
            <TextView
                android:layout_gravity="center"
                android:text="@string/add_to_star"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/save"
                android:layout_marginRight="20dp"
                android:text="@string/save"
                android:gravity="center"
                android:layout_gravity="right|center"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"/>
        </FrameLayout>
    </androidx.appcompat.widget.Toolbar>
    <EditText
        android:paddingLeft="10dp"
        android:enabled="false"
        android:singleLine="true"
        android:layout_margin="20dp"
        android:background="@drawable/search_bar_bg"
        android:id="@+id/url"
        android:layout_width="match_parent"
        android:layout_height="50dp"/>
    <EditText
        android:paddingLeft="10dp"
        android:hint="@string/name"
        android:singleLine="true"
        android:layout_margin="20dp"
        android:background="@drawable/search_bar_bg"
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="50dp"/>
    <TextView
        android:gravity="right"
        android:text="0/20"
        android:layout_margin="20dp"
        android:id="@+id/text_count"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</LinearLayout>