<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="1000dp"
    android:background="@color/grey"
    app:layout_behavior="@string/bottom_sheet_behavior">
    <androidx.appcompat.widget.Toolbar
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_height">
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:id="@+id/collapse"
                android:src="@drawable/back"
                android:layout_gravity="center|left"
                android:layout_width="@dimen/toolbar_back_size"
                android:layout_height="@dimen/toolbar_back_size"/>
            <EditText
                android:imeOptions="actionSearch"
                android:gravity="center"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/search_bar_bg"
                android:id="@+id/name"
                android:text="@string/route"
                android:layout_gravity="center"
                android:layout_width="150dp"
                android:layout_height="match_parent"/>
            <TextView
                android:layout_marginRight="80dp"
                android:layout_gravity="right"
                android:gravity="center"
                android:text="@string/clear"
                android:id="@+id/clear"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"/>
            <TextView
                android:gravity="center"
                android:layout_marginRight="20dp"
                android:layout_gravity="center|right"
                android:text="@string/save"
                android:id="@+id/save"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"/>
        </FrameLayout>
    </androidx.appcompat.widget.Toolbar>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="800dp">
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/bottom_pos_rv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </FrameLayout>
</LinearLayout>