<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.home.LoginActivity"
    android:orientation="vertical"
    android:background="@drawable/bg1">
    <LinearLayout
        android:layout_marginTop="120dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:id="@+id/text_container"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/account"
            android:paddingLeft="10dp"
            android:hint="邮箱"
            android:background="@drawable/search_bar_bg"
            android:layout_width="match_parent"
            android:layout_height="40dp"/>
        <EditText
            android:id="@+id/password"
            android:paddingLeft="10dp"
            android:hint="密码"
            android:background="@drawable/search_bar_bg"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="40dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="220dp"
        android:id="@+id/button_container"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:textColor="@color/white"
            android:background="@drawable/send_button_bg"
            android:textAllCaps="false"
            android:text="@string/login"
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <LinearLayout
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/sign_up"
                android:textColor="@color/ThemeBlue"
                android:paddingLeft="10dp"
                android:text="@string/sign_up"
                android:textAllCaps="false"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>
            <TextView
                android:id="@+id/forget_password"
                android:textColor="@color/ThemeBlue"
                android:paddingRight="10dp"
                android:gravity="right"
                android:text="@string/forget_passwd"
                android:textAllCaps="false"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>